--- a/README.rdoc
+++ b/README.rdoc
@@ -40,8 +40,9 @@ Then, generate the <tt>Comment</tt> model as follows:
 
   rails generate model Comment content:text commentable_id:integer commentable_type:string
 
-This model has a <tt>content</tt> attribute, which will store the actual comment. The other two attributs,
-<tt>commentable_id</tt> and  <tt>commentable_type</tt>, are needed for the polymorphic assocations. Because the
+This model has a <tt>content</tt> attribute, which will store the actual comment (note that the fact that this attribute is also
+ called content, like the attribute in <tt>Post</tt> and <tt>Editorial</tt>, is purely coincidental and not necessary). The other two attributes,
+<tt>commentable_id</tt> and <tt>commentable_type</tt>, are needed for the polymorphic assocations. Because the
 <tt>Comment</tt> model belongs to many models (2 in our case), you can't just store an id for a post, or for an editorial -
 you might have posts and editorials that have the exact same id. In polymorphic associations, the combination of an id and a type
 solves this problem.
@@ -58,7 +59,7 @@ and
 
   /editorials
 
-And be able to add posts and comments. Admittedly, this is ugly looking, but that's not our focus here.
+and be able to add posts and editorials. Admittedly, this is ugly looking, but that's not our focus here.
 
 Now, let's implement the polymorphic assocations. In models/comment.rb, add
 
@@ -75,7 +76,69 @@ What this does is it associates <tt>Comment</tt> to <tt>Post</tt> through the as
 name the association whatever you want). We also want comments to be deleted when a post is deleted, hence the destroy
 dependence.
 
-You now have a polymorphic association, but 1) how do you CRUD (create read update delete) comments belonging to post?
+You now have a polymorphic association, but how do you CRUD (create read update delete) comments belonging to post?
+
+First, the creation. You want to have a nested form where both the model and the comments can be created (and later edited or deleted)
+at the same time. In order to do that, you need to tell the <tt>Post</tt> model that it should accept nested attributes for
+the comments. To do this, add the following to models/post.rb:
+
+  accepts_nested_attributes_for :comments,
+                                  reject_if:lambda { |attrs|
+                                    attrs.all? { |key, value| value.blank? }
+                                  },
+                                  allow_destroy:true
+
+The <tt>accepts_nested_attributes_for</tt> does the job - the rest of the code serves two important functions. The first
+part ensures that we are not storing blank comments; the second part ensures that we can delete comments.
+
+Now, let's update the form. In views/posts/_form.html.erb, you have a line
+
+  <%= form_for(@post) do |f| %>
+
+Change this to
+
+  <%= form_for(@post.with_blank_comment) do |f| %>
+
+This will call a method (which will have to generate) that will make sure that a comment is built - otherwise the form
+elements for comments will not be shown.
+
+In the same file, right before the submit button, add
+
+  <%= f.fields_for(:comments) do |comments_form| %>
+        <div class="field">
+        <%=  comments_form.label 'Comment:' %>
+        <%=  comments_form.text_field :content %>
+        <%=  unless comments_form.object.new_record?
+               comments_form.check_box('_destroy') + comments_form.label('_destroy','Remove')
+             end %>
+        </div>
+    <% end %>
+
+This renders the form element for the comment, and further ensures that there is a checkbox to delete the comment.
+
+Now, let's not forget to create the <tt>with_blank_comment</tt> method. In models/post.rb, add
+
+  def with_blank_comment
+    comments.build
+    self
+  end
+
+Ok, this should allow us to create (and update / delete) comments. Go ahead and try it out - you won't see the comments,
+because we haven't implemented the show and index views, but you can verify that the comments are created, updated and
+deleted through the console:
+
+  rails console
+  >> Comment.all
+
+Notice that each comment has an <tt>id</tt> attribute (its unique identifier) as well as a <tt>commentable_id</tt> and
+<tt>commentable_type</tt> attribute. The <tt>commentable_id</tt> is the id of the corresponding <tt>Post</tt>, and the
+<tt>commentable_type</tt> should be Post.
+
+
+
+
+
+
 
 
 
